--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -528,22 +528,17 @@ config GENERIC_CPUFREQ_CPU0
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_BIOSHOCK
-	tristate "'bioshock' cpufreq bioshock"
-	depends on CPU_FREQ
+config G92X_CPU_UNDERCLOCK
+	bool "Exynos7420 min cpu frequenz"
+	depends on ARM_EXYNOS7420_CPUFREQ
 	help
-	  'bioshock' - More aggressive version of conservative
-
-config CPU_FREQ_GOV_ALUCARD
-	tristate "'alucard' cpufreq governor"
-	depends on CPU_FREQ
-
-config CPU_FREQ_GOV_HYPER
-	tristate "'hyper' cpufreq governor"
-	depends on CPU_FREQ
-	---help---
-	'hyper' - A tweaked "ondemand" based smart and smooth optimized governor!
-	If in doubt, say N.
+	   Sets Apollo and Atlas clusters to min cpu frequenz
+	   
+config G92X_CPU_OVERCLOCK
+	bool "Exynos7420 max cpu frequenz"
+	depends on ARM_EXYNOS7420_CPUFREQ
+	help
+	   Sets Apollo and Atlas clusters to max cpu frequenz
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
