--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -329,7 +329,13 @@ config FOTA_LIMIT
 	  Add sysfs to notify limit information to recovery module
 	  /sys/power/fota_limit
 
-config	BOEFFLA_WL_BLOCKER
- 		bool "Boeffla generic wakelock blocker driver"
- 		depends on PM
- 		default N
+
+config BOEFFLA_WL_BLOCKER
+	bool "Boeffla generic wakelock blocker driver"
+	depends on PM
+	default N
+
+config PM_SYNC_BEFORE_SUSPEND
+	bool "Sync file systems before suspend"
+	depends on PM
+	default y
