--- a/arch/arm64/configs/flat_defconfig
+++ b/arch/arm64/configs/flat_defconfig
@@ -254,7 +254,7 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIFO=y
-# CONFIG_IOSCHED_FIOPS is not set
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_SIO=y
@@ -462,6 +462,7 @@ CONFIG_ARMV7_COMPAT=y
 CONFIG_ARMV7_COMPAT_CPUINFO=y
 CONFIG_SECCOMP=y
 # CONFIG_CC_STACKPROTECTOR is not set
+CONFIG_LAZYPLUG=y
 #
 # Boot options
 #
@@ -508,7 +509,6 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
-CONFIG_WQ_POWER_EFFICIENT=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
@@ -521,19 +521,41 @@ CONFIG_FOTA_LIMIT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTEREXTREM is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTEREXTREM=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_MODE_AUTO_CHANGE=y
+# CONFIG_CPU_FREQ_GOV_INTEREXTREM is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+# CONFIG_CPU_FREQ_GOV_ZZMOOVE is not set
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTEREXTREM=y
+# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+CONFIG_MODE_AUTO_CHANGE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -1900,7 +1922,6 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_DIAG_MODE is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
-CONFIG_FRANDOM=y
 
 #
 # Serial drivers
