--- a/arch/arm64/configs/edge_defconfig
+++ b/arch/arm64/configs/edge_defconfig
@@ -119,7 +119,6 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
-CONFIG_IPC_NS=y
 # CONFIG_USER_NS is not set
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
@@ -254,7 +253,6 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_NOOP=y
@@ -463,7 +461,7 @@ CONFIG_ARMV7_COMPAT=y
 CONFIG_ARMV7_COMPAT_CPUINFO=y
 CONFIG_SECCOMP=y
 # CONFIG_CC_STACKPROTECTOR is not set
-CONFIG_LAZYPLUG=y
+
 #
 # Boot options
 #
@@ -481,7 +479,6 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
-CONFIG_SYSVIPC_COMPAT=y
 CONFIG_KEYS_COMPAT=y
 
 #
@@ -511,6 +508,7 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
@@ -530,32 +528,28 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTEREXTREM is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTEREXTREM is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_MODE_AUTO_CHANGE=y
-CONFIG_CPU_FREQ_GOV_INTEREXTREM=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 # CONFIG_CPU_FREQ_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
-CONFIG_MODE_AUTO_CHANGE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
@@ -1205,7 +1199,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-# CONFIG_CHECK_SIMSLOT_COUNT is not set
+CONFIG_CHECK_SIMSLOT_COUNT=y
 # CONFIG_CHECK_GPIO_DETECT is not set
 CONFIG_TIMA_LOG=y
 # CONFIG_SEC_FPGA_ICE40XX is not set
@@ -1923,6 +1917,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_DIAG_MODE is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
