--- a/zeroflte/ramdisk/init.samsungexynos7420.rc
+++ b/zeroflte/ramdisk/init.samsungexynos7420.rc
@@ -2,9 +2,9 @@
 import init.samsungexynos7420.usb.rc
 import init.wifi.rc
 import init.baseband.rc
-import init.carrier.rc
 import init.fac.rc
 import init.exynos7420_fac.rc
+import init.gps.rc
 
 on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
@@ -359,7 +359,7 @@ on boot
     chmod 0770 /system/bin/rtc_log.sh
     chown system system /system/bin/rtc_log.sh
 
-    chown bluetooth bluetooth /dev/ttySAC4
+    chown bluetooth net_bt_stack /dev/ttySAC4
     chmod 0660 /dev/ttySAC4
 # mobicore
     chmod 0660 /dev/t-base-tui
@@ -395,12 +395,14 @@ on boot
 
 # permissions for bluetooth.
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
-    chown bluetooth bluetooth ro.bt.bdaddr_path
-    chown radio bluetooth /efs/bluetooth/bt_addr
+    chown bluetooth net_bt_stack ro.bt.bdaddr_path
+    chown radio net_bt_stack /efs/bluetooth/bt_addr
     chmod 0640 /efs/bluetooth/bt_addr
+    chown bluetooth bluetooth /dev/ttySAC4
+    chmod 0660 /dev/ttySAC4
     chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
+    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
+    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
 
 #for datarouter
     chown system system /dev/dun
@@ -425,6 +427,26 @@ on boot
 on fs
     mount_all /fstab.samsungexynos7420
     setprop ro.crypto.fuse_sdcard true
+    #For Absolute Persistence Partition
+    mkdir /persdata 0755 system system
+    mkdir /persdata/absolute 0750 system system
+
+    wait /dev/block/platform/15570000.ufs/by-name/PERSDATA
+    mount ext4 /dev/block/platform/15570000.ufs/by-name/PERSDATA /persdata/absolute nosuid nodev noatime noauto_da_alloc,discard,journal_async_commit,errors=panic
+
+    chown system system /persdata
+    chmod 0755 /persdata
+    chown system system /persdata/absolute
+    chmod 0750 /persdata/absolute
+
+    #For SBFS partition
+    mkdir /sbfs 0755 system system
+    wait /dev/block/platform/15570000.ufs/by-name/SBFS
+    check_fs /dev/block/platform/15570000.ufs/by-name/SBFS ext4
+    mount ext4 /dev/block/platform/15570000.ufs/by-name/SBFS /sbfs nosuid nodev barrier=1
+
+    chown system system /sbfs
+    chmod 0755 /sbfs
 
 # Permissions for TouchScreen
     chown system radio /sys/class/sec/tsp/cmd
@@ -451,6 +473,7 @@ on fs
     chown system radio /sys/class/input_booster/level
     chown system radio /sys/class/input_booster/head
     chown system radio /sys/class/input_booster/tail
+    chown system radio /sys/class/input_booster/touch/control
 
 # Permissions for EFS
     chown radio system /efs
@@ -493,12 +516,23 @@ on fs
     chown system media_rw /sys/class/mdnie/mdnie/scenario
     chown system system /sys/class/mdnie/mdnie/accessibility
     chown system system /sys/class/mdnie/mdnie/sensorRGB
+    chown system system /sys/class/mdnie/mdnie/mdnie_ldu
+    chown system system /sys/class/mdnie/mdnie/night_mode
+# Permissions for ISDBT 
+    chown system system /dev/isdbt 
+    chmod 0660 /dev/isdbt
 
 # Permissions for System LSI NFC
 # NFC : Permissions for NFC
     chmod 0660 /dev/sec-nfc
+    chmod 0660 /dev/sec-nfc-fn
+    chmod 0660 /dev/felica_ant
+    chmod 0660 /dev/ttySAC0
 # NFC : change owner
     chown nfc nfc /dev/sec-nfc
+    chown nfc nfc /dev/sec-nfc-fn
+    chown nfc nfc /dev/felica_ant
+    chown nfc nfc /dev/ttySAC0
 
 # Permissions for NXP NFC
 # NFC : Permissions for NFC
@@ -526,8 +560,6 @@ on fs
     chown system radio /sys/class/fingerprint/fingerprint/type_check
     chown system radio /sys/class/fingerprint/fingerprint/name
     chown system radio /sys/class/fingerprint/fingerprint/vendor
-    chown system radio /sys/class/fingerprint/fingerprint/adm
-    chown system radio /sys/class/fingerprint/fingerprint/retain_pin
 
 # Accelerometer_sensor
     chown system radio /sys/class/sensors/accelerometer_sensor/raw_data
@@ -651,6 +683,7 @@ on fs
     chown system radio /sys/class/sensors/ssp_sensor/uncalib_gyro_poll_delay
     chown system radio /sys/class/sensors/ssp_sensor/mag_poll_delay
     chown system radio /sys/class/sensors/ssp_sensor/uncal_mag_poll_delay
+	chown system radio /sys/class/sensors/ssp_sensor/light_ir_poll_delay
     chown system radio /sys/class/sensors/ssp_sensor/light_poll_delay
     chown system radio /sys/class/sensors/ssp_sensor/pressure_poll_delay
     chown system radio /sys/class/sensors/ssp_sensor/prox_poll_delay
