--- a/zeroflte/ramdisk/init.usb.configfs.rc
+++ b/zeroflte/ramdisk/init.usb.configfs.rc
@@ -1,11 +1,12 @@
 # Used to disable USB when switching states
 on property:sys.usb.config=none && property:sys.usb.configfs=1
+    write /config/usb_gadget/g1/UDC "none"
     stop adbd
     setprop sys.usb.ffs.ready 0
     write /sys/class/android_usb/android0/enable 0
-    write /sys/kernel/config/usb_gadget/g1/bDeviceClass 0
-    write /sys/kernel/config/usb_gadget/g1/bDeviceSubClass 0
-    write /sys/kernel/config/usb_gadget/g1/bDeviceProtocol 0
+    write /config/usb_gadget/g1/bDeviceClass 0
+    write /config/usb_gadget/g1/bDeviceSubClass 0
+    write /config/usb_gadget/g1/bDeviceProtocol 0
     setprop sys.usb.state ${sys.usb.config}
 
 # adb only USB configuration
