--- a/arch/arm64/configs/noblelte_defconfig
+++ b/arch/arm64/configs/noblelte_defconfig
@@ -4,18 +4,6 @@
 #
 
 CONFIG_BOEFFLA_WL_BLOCKER=y
-
-# Enable OC and UC - S
-CONFIG_EXYNOS7420_CPU_UNDERCLOCK=y
-CONFIG_EXYNOS7420_CPU_OVERCLOCK=y
-# Enable OC and UC - E
-
-# S123 - from nemesis
-CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_DYNAMIC_PAGE_WRITEBACK=y
-CONFIG_DCACHE_WORD_ACCESS=y
-# E123 - from nemesis
-
 CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
@@ -545,7 +533,6 @@ CONFIG_FOTA_LIMIT=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
-CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
@@ -553,98 +540,36 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_UMBRELLA_CORE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PRESERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLUACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NEXUS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SAKURACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_DYNAMIC_INTERACTIVE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set - not compatible
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVEX is not set
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set - May29
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_NEXUS=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_UMBRELLA_CORE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
-CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_INTERACTIVEX is not set
-# CONFIG_CPU_FREQ_GOV_SAKURACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_BLUACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_DANCEDANCE is not set
+CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-# CONFIG_CPU_FREQ_GOV_ONDEMANDX is not set
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_WAVE=y
 CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
-# CONFIG_MODE_AUTO_CHANGE is not set
-#CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS is not set
+CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-# CONFIG_CPU_FREQ_GOV_LAZY is not set
-# CONFIG_CPU_FREQ_GOV_ZENX causing system crashed 
-# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
-# CONFIG_CPU_FREQ_GOV_BADASS is not set
-CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
-CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
-CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-# CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
-CONFIG_LAGFREE_MAX_LOAD=80
-CONFIG_LAGFREE_MIN_LOAD=20
-CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
-CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
-CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
-CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
-CONFIG_CPU_FREQ_MIN_TICKS=10
-CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=2000
-# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
-# CONFIG_CPU_FREQ_GOV_SAVAGEDZEN is not set
-# CONFIG_CPU_FREQ_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_GOV_HOTPLUG is not set - not compatible
-# CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
-# CONFIG_CPU_FREQ_GOV_ADAPTIVEX is not set
-# CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_LULZACTIVEQ is not set
-CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
+# CONFIG_CPU_FREQ_GOV_YANKACTIVE is not set
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_MODE_AUTO_CHANGE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -2765,26 +2690,53 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 # ARM GPU Configuration
 #
 # CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_GATOR_SUPPORT is not set
+# CONFIG_MALI_T6XX_DVFS is not set
+# CONFIG_MALI_T6XX_RT_PM is not set
+# CONFIG_MALI_T6XX_ENABLE_TRACE is not set
 CONFIG_MALI_EXYNOS_TRACE=y
+# CONFIG_MALI_T6XX_DEBUG_SYS is not set
+CONFIG_MALI_EXPERT=y
+# CONFIG_MALI_PLATFORM_FAKE is not set
 CONFIG_MALI_PLATFORM_THIRDPARTY=y
-# CONFIG_MALI_MIDGARD is not set
+CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="exynos"
+# CONFIG_MALI_DEBUG is not set
+# CONFIG_MALI_NO_MALI is not set
+# CONFIG_MALI_TRACE_TIMELINE is not set
+# CONFIG_MALI_SYSTEM_TRACE is not set
+# CONFIG_MALI_GPU_TRACEPOINTS is not set
+CONFIG_MALI_MIDGARD=y
+# CONFIG_DYNIMIC_ABB is not set
 # CONFIG_MALI_MIDGARD_WK04 is not set
 CONFIG_MALI_DVFS=y
-CONFIG_DDK_VERSION_OS="n"
+CONFIG_DDK_VERSION_OS="o"
 CONFIG_MALI_T7XX=y
 # CONFIG_MALI_R7P0 is not set
-CONFIG_MALI_R15P0=y
+# CONFIG_MALI_R12P0 is not set
+# CONFIG_MALI_R15P0 is not set
+CONFIG_MALI_R22P0=y
 CONFIG_MALI_SYSTRACE_SUPPORT=y
 CONFIG_MALI_RT_PM=y
+# CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 CONFIG_MALI_DEBUG_SYS=y
+# CONFIG_MALI_DEVFREQ is not set
 CONFIG_MALI_SEC_HWCNT=y
-CONFIG_EXYNOS_SOC_NAME=""
+CONFIG_EXYNOS_SOC_NAME="7420"
+# CONFIG_MALI_DMA_FENCE is not set
+# CONFIG_MALI_PRFCNT_SET_SECONDARY is not set
+# CONFIG_MALI_MIDGARD_DVFS is not set
+# CONFIG_MALI_CORESTACK is not set
+CONFIG_MALI_FENCE_DEBUG=y
 CONFIG_MALI_SEC_CL_BOOST=y
 CONFIG_MALI_SEC_UTILIZATION=y
 CONFIG_MALI_PM_QOS=y
 # CONFIG_MALI_BTS_OPTIMIZATION is not set
 CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
-# CONFIG_MALI_EXYNOS_SECURE_RENDERING is not set
+CONFIG_MALI_EXYNOS_SECURE_RENDERING=y
+# CONFIG_MALI_JOB_DUMPING is not set
+# CONFIG_MALI_2MB_ALLOC is not set
+# CONFIG_MALI_PWRSOFT_765 is not set
+CONFIG_MALI_SEC_JOB_STATUS_CHECK=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
