config: utilize ccache & graphite

--- a/arch/arm64/configs/zerolte_defconfig
+++ b/arch/arm64/configs/zerolte_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.61 Kernel Configuration
+# Linux/arm64 3.10.108 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -20,6 +20,8 @@ CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CSUM=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
+CONFIG_USE_CCACHE=y
+CONFIG_USE_GRAPHITE=y
 # CONFIG_ZONE_DMA is not set
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
