--- a/arch/arm64/configs/zerolte_defconfig
+++ b/arch/arm64/configs/zerolte_defconfig
@@ -547,6 +547,7 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_NEXUS=y
 CONFIG_CPU_FREQ_GOV_WAVE=y
 CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
