--- a/arch/arm64/configs/zerolte_defconfig
+++ b/arch/arm64/configs/zerolte_defconfig
@@ -44,9 +44,9 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-xeriumOreo-v2.1"
+CONFIG_LOCALVERSION="-xeriumOreo-v2.2"
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME="vega"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
